# read-files-to-dataframe

./: README.md  pyproject.toml
src/: __main__.py
src/data/csv_files/csv_fles/: 1.csv  2.csv  3.csv  4.csv  5.csv
src/lib/: AbstractDataSource.py  CsvSource.py  FilesSources.py
